# gpu-contention

./: .gitignore  CMakeLists.txt
experiments/scripts/: run_ncu_characterization.sh
include/: gpu_monitor.hpp  kernels.hpp  scheduler.hpp  workload_manager.hpp
kernels/: CMakeLists.txt  canny.cu  conv2d.cu  gaussian_blur.cu  harris.cu  histogram.cu  kernel_helpers.cu  kernels.hpp  matmul.cu
kernels/examples/: generate_test_video.py  test_bandwidth.cpp  test_canny.cpp  test_compute.cpp  test_conv2d.cpp  test_gaussian.cpp  test_harris.cpp  test_histogram.cpp  test_matmul.cpp
past-work/: CMakeLists.txt  README.md
past-work/include/: execution_manager.hpp  gpu_monitor.hpp  kernels.hpp  scheduler.hpp  video_experiment_framework.hpp
past-work/scripts/: setup_instance.sh  test_video_generator.py
past-work/src/: execution_manager.cpp  gpu_monitor.cpp  kernels.cu  run_video_experiments.cpp  scheduler.cpp  video_processor.cpp
past-work/testing/: quick_video_test.cpp  test_execution_manager.cpp  test_full_system.cpp  test_gpu_monitor.cpp  test_scheduler.cpp
past-work/video_results/: experiment_report.txt  video_detailed_results.json  video_experiment_results.csv
results/bulk/3060_ncu_results/: ncu_log.txt  ncu_raw.csv  ncu_summary.csv
results/bulk/l4_ncu_results/: ncu_log.txt  ncu_raw.csv  ncu_summary.csv
results/bulk/t4_ncu_results/: ncu_log.txt  ncu_raw.csv  ncu_summary.csv
results/characterization/: 3060_ncu_summary.csv  l40s_ncu_summary.csv  l4_ncu_summary.csv  t4_ncu_summary.csv
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/bandwidth-compute/1280x720/: bandwidth-compute_concurrent.json  bandwidth-compute_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/bandwidth-compute/1920x1080/: bandwidth-compute_concurrent.json  bandwidth-compute_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/canny-harris/1280x720/: canny-harris_concurrent.json  canny-harris_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/canny-harris/1920x1080/: canny-harris_concurrent.json  canny-harris_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/histogram-gaussian/1280x720/: histogram-gaussian_concurrent.json  histogram-gaussian_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/histogram-gaussian/1920x1080/: histogram-gaussian_concurrent.json  histogram-gaussian_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/matmul-conv/1280x720/: matmul-conv_concurrent.json  matmul-conv_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/matmul-conv/1920x1080/: matmul-conv_concurrent.json  matmul-conv_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/small-matmul-canny/1280x720/: small-matmul-canny_concurrent.json  small-matmul-canny_sequential.json
results/organized_data/NVIDIA_GeForce_RTX_3060_Laptop_GPU/characterization_heavy/NVIDIA_GeForce_RTX_3060_Laptop_GPU/small-matmul-canny/1920x1080/: small-matmul-canny_concurrent.json  small-matmul-canny_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/: scheduler_cache.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/bandwidth-compute/1280x720/: bandwidth-compute_concurrent.json  bandwidth-compute_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/bandwidth-compute/1920x1080/: bandwidth-compute_concurrent.json  bandwidth-compute_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/canny-harris/1280x720/: canny-harris_concurrent.json  canny-harris_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/canny-harris/1920x1080/: canny-harris_concurrent.json  canny-harris_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/histogram-gaussian/1280x720/: histogram-gaussian_concurrent.json  histogram-gaussian_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/histogram-gaussian/1920x1080/: histogram-gaussian_concurrent.json  histogram-gaussian_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/matmul-conv/1280x720/: matmul-conv_concurrent.json  matmul-conv_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/matmul-conv/1920x1080/: matmul-conv_concurrent.json  matmul-conv_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/small-matmul-canny/1280x720/: small-matmul-canny_concurrent.json  small-matmul-canny_sequential.json
results/organized_data/a10g/characterization_heavy/NVIDIA_A10G/small-matmul-canny/1920x1080/: small-matmul-canny_concurrent.json  small-matmul-canny_sequential.json
results/organized_data/l4/characterization_heavy/NVIDIA_L4/bandwidth-compute/1280x720/: bandwidth-compute_concurrent.json  bandwidth-compute_sequential.json
results/organized_data/l4/characterization_heavy/NVIDIA_L4/bandwidth-compute/1920x1080/: bandwidth-compute_concurrent.json  bandwidth-compute_sequential.json
src/: scheduler.cpp  workload_manager.cpp
testing/: characterize_kernels.cpp  test_kernels_solo.cpp
workloads/: CMakeLists.txt  canny.cu  conv2d.cu  gaussian_blur.cu  harris.cu  histogram.cu  synthetic_bandwidth.cu  synthetic_compute.cu
workloads/examples/: generate_test_image.py  test_bandwidth.cpp  test_canny.cpp  test_compute.cpp  test_conv2d.cpp  test_gaussian.cpp  test_harris.cpp  test_histogram.cpp  test_matmul.cpp
(+36 files in other folders)
